--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,51 +1,58 @@
 
 * {
     margin: 0 ;
-    padding: 0 ;
+    padding: 0;
     box-sizing:border-box ;
 }
 
 /* Class Selectors*/
 .box {
+    height: auto;
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 1) ;
     padding: 1rem;
     background-color:  #eee;
     color: #000 ;
 }
 
-
 nav{
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
 }
 
 h1{
-    color: steelblue
+    color: steelblue;
+    border-bottom:solid 1px #000;
 }
+
  main img{
-    width: 150px;
+    width: 120px;
     height: auto;
-    border: 1px solid steelblue;
+    margin-top: 10px;
+    border: 1px hidden rgba(0, 0, 0, 1) ;
     padding: 2px;
     box-shadow: 0 0 30px gray;
     float: right;
 }
-
-p{
+main p {
     padding: 0;
 }
-main{
-    max-width: 840px;
-}
+
+
 aside{
     width: 20rem;
+    height: 300px;
     text-align: center;
 }
 aside img{
@@ -54,7 +61,6 @@ aside img{
 }
 
 aside h2{
-    position: relative;
     top: 47px;
     left: 10px;
 }
@@ -63,4 +69,25 @@ footer{
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+header, .grid,  footer{
+    max-width: 840px;
+    margin: 0 auto;
+
+}
+.grid{
+display: grid;
+align-items: center;
+}
+
+main{
+    grid-column: 2/3;
+    margin: 1rem;
+}
+aside{
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+
 }
