--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,25 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Pathway+Gothic+One&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap');
 * {
     margin: 0 ;
     padding: 0 ;
-    box-sizing:border-box ;
+   box-sizing: border-box;
 }
 body{
     margin: 1rem;
-    padding: 1rem;
+    padding: 1rem ;
 }
 
 :root {
     --primary-color: #3a9df4;
     --secondary-color: #125ec1;
-    --heading-font : 'Roboto', sans-serif;;
-    --paragraph-font:'Heebo', sans-serif;
-    --background-color: rgb(34, 150, 152, .3) ;
+    --heading-font :'Bowlby One', sans-serif;
+    --paragraph-font: 'Pathway Gothic One', sans-serif;
+    --background-color: rgb(34, 150, 152, .6) ;
     }
-    nav a{
-        text-decoration: none;
-    }
+    
     .hero {
         margin-bottom: 1rem;
     }
@@ -32,14 +30,15 @@ body{
         height: auto;
         position: absolute;
         background-color:  rgba(0, 0, 0, 0.8);
-        top: 420px;
+        top: 400px;
         text-align: center;
         
     }
       
     .hero img {
      width: 100%;
-     height: auto;     
+     height: auto; 
+     margin-top: 2rem;    
     }
     
     article{
@@ -47,7 +46,7 @@ body{
         height: auto;
         position: absolute;
         background-color:var(--background-color);
-        top: 100%;
+        top: 90%;
         left: 20%;
     }
     article img{
@@ -67,6 +66,80 @@ body{
     display: block;
     
    }
+   header{
 
-    
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+   align-items: center;
+   background-color: var(--background-color);
    
+   
+  
+   
+   }
+ header img{
+    width: 90px;
+    height: auto;
+    display: flex;
+    justify-self: center;
+    
+    
+        
+    }
+
+    header nav {
+        display: flex;
+        justify-content: space-around ;
+        font-size: nav
+        
+       
+    }
+
+    header a{
+    height: 2rem;
+	color: black;
+	text-decoration: none;
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: end;   
+    font-size: 'Bowlby One', sans-serif;
+    }
+.advent{
+    text-align: center;
+    padding: 2rem;
+  
+}   
+.adventure {
+    display: flex;
+}
+
+.adventure  img{
+    width:200px ;
+    height: 150px;
+}
+.story{
+    text-align: center;
+}
+.history{
+     display: flex;
+     padding: 2rem;
+     
+}
+.history img {
+   width: 400px;
+ 
+ }
+.history p {
+   align-self: center;
+
+}
+
+footer{
+    margin: 2rem;
+    display: flex;
+    justify-content:flex-end;
+   
+    
+    
+
+}
